<resources>
    <string name="app_name">Справочник субкультур</string>
    <string name="btnReturn_name">Вернуться</string>
    <string name="change_theme">Поменять тему</string>
    <string name="bikers_1">Байкеры — любители и поклонники мотоциклов, но отличие от обычных мотоциклистов, у байкеров мотоцикл является частью образа жизни. В основе их идеологии лежат три символа: дорога, скорость и свобода. Характерным также является объединение с единомышленниками на основе этого образа жизни.</string>
    <string name="bikers_2">Дух братства, свободы и правды, лежащий в основе философии истинного байкера, пытается противостоять искушениям и соблазнам общества потребительства и лицемерия. Мотоцикл всегда для байкера на первом месте. Затем все остальное, включая любовь и семью.</string>
    <string name="bikers_3">Кругозор члена байк-клуба включает знания технических тонкостей обслуживания любимого железного коня, а также истории движения и клуба, правил поведения. Многие мотоклубы имеют президента, вице-президента, сержанта по оружию, казначея, секретаря, исполняющих возложенные на них обязательства. Каждый байкер – активный участник мотоциклетной жизни, деятельность которого направлена на пользу сообществу.</string>
    <string name="bikers_4">Стиль байкеров:
        \nКожаная куртка-косуха, джинсовая или кожаная жилетка с символикой мотоклуба, кожаные штаны. Банданы, черные вязаные шапочки, защищающие от ветра, мотоочки, длинные волосы, борода и усы. Шлемы в виде стилизованных немецких касок времен Второй мировой. Символика: череп, число 13, железный крест и флаг конфедерации</string>
    <string name="bikers_5">\nБайкерское движение зародилось в 1950-х годах в США откуда проникло в Европу и Россию. Несмотря на то, что СССР был вторым по количеству производимых мотоциклов после Японии, байкеры появились только на излете советской эпохи. В Америке к тому времени байкеры из «беспечных ездоков» превратились в крупные банды и промышляли всеми возможными видами криминала, но в основном крышевали нелегальный бизнес, торговлю наркотиками и охраняли концерты.У советских байкеров, которых называли тогда рокерами, был свой собственный кайф. С 1984 года молодые бунтари, в большинстве своем одетые в кирзовые сапоги и телогрейки,  встречались в Луже (Лужниках), после чего грохочущая стая из 50-200 мотоциклов марки «Ява» носилась по ночным улицам Москвы, будя и пугая несчастных обывателей. К концу 80-х часть мотоциклистов пересела на тяжелые ретробайки и «Харлеи», и именно они первыми стали называть себя байкерами.
        В ходе столкновений с гопниками и «люберами» в период с 1986 по 1991 год, в рокерской и хеви-металлической среде выделились особые активные группы, которые на рубеже 90-х преобразовались в первые мотто клубы. Со своей визуальной  атрибутикой по образцу иностранных байк клубов и на тяжелых мотоциклах, модернизированных вручную или же вовсе на послевоенных трофейных образцах . Уже к 90-му году в Москве можно было выделить группировки «Hell Dogs», «Night wolves», «Сossacs Russia». Так же присутствовали менее долгосрочные мото объединения, такие как  «мс Давыдково».</string>
    <string name="bikers_6">\nСамо название байкеры, как символ отделения этого этапа от рокерского прошлого, сначала закрепилось за группой  сплотившейся вокруг Александра Хирурга, и далее распространилось на все мотто-движение, постепенно охватывающее многие города постсоветского пространства. Основным местом дислокации байкеров того периода считалась «Пушка» и  «Лужа», а к мотто маршрутам прибавились, пятачок на Васильевском спуске  «Патрики» (Патриаршие пруды), «Горбушка» (дк Горбунова), клаб Хаус «Ночных волков» в Зеленом театре и кафе «Отрадное» ( которое вслед за обвалившимися буквами обозначили как «Тырдын»). История этого движения  зародившегося  на рубеже 90-х , продолжается и сегодня.</string>
    <string name="bikers_7">Байкеры в России
	    \nСейчас в России существует под сотню мотоклубов, которые проводят байк-слеты и фестивали, где играют в основном рок-музыканты. В последние годы «Ночные волки» и в особенности их лидер Хирург резко политизировались. В отличие от своих западных братьев, всегда остающихся вне политики, они поддерживают правящий режим, дружат и фотографируются с президентом России, охраняют храмы и занимаются благотворительностью, что байкерам во всем остальном мире совершенно чуждо.</string>
    <string name="emo_1">Эмо (англ. emo: от emotional — эмоциональный) — молодежная субкультура, образовавшаяся на базе поклонников одноимённого музыкального стиля. Её представителей называют Эмо-киды (emo + англ. kid — молодой человек; ребенок) или, в зависимости от пола: эмо-бой (англ. boy — мальчик, парень), эмо-гёрл (англ. girl — девочка, девушка).
        Как и большинство современных субкультур, эмо берет начало в США. И началась она с музыки. В начале 80-х на музыкальной ниве был все еще популярен так называемый "Вашингтонский хардкор" - смесь тяжелого рока и панк-рока. Это был весьма оригинальный стиль звучания, сопровождавшийся множеством шумов и сильным вокалом. Однако в 1983 году распалась известная хардкор-группа Minor Threat и свежие идеи остальных групп пошли на убыль.. Группы начали отдаляться от оригинального звучания хардкор панка и экспериментировать в различных направлениях. Песни стали приобретать мелодичность, а вокал стал еще более чувственным. Первая Эмо-волна пришлась на лето 1985, когда в Вашингтоне возникло несколько рок-групп с мелодичным звучанием и новыми элементами вокала. Наиболее выделяется среди них группа Embrace, где в качестве вокалиста выступает Айен Маккей (Ian MacKaye) – бывший вокалист Minor Threat. Айен стал основателем sXe движения, которое впоследствии приобрело бешеную популярность в среде Эмокорщиков и хардкорщиков. Муз		ыка этой группы была названа "Эмо" ("Emo"), как сокращение от слова "Эмоциональный" ("Emotional"). Это подчеркнуло чувственность исполняемых песен, выражение в них эмоций авторов.</string>
    <string name="emo_2">С 1986 года многие группы начинают акцентировать внимание на Эмо-элементах. Такие исполнители, как The Hated и Moss Icon, помимо скоростного ритма стиля панк, добавляют в свои композиции вокал, который срывается на крик в кульминационных моментах.
	    Наконец, с 1990 года стиль Эмо становится весьма известен в музыкальных кругах и выделяется в отдельную субкультуру. Начинают развиваться новые подвиды этого стиля. Из них можно выделить основные:</string>
    <string name="emo_3">
        \n"Хардкор Сан-Диего" (Сан-Диего, 1992 ) - смесь классического хардкора и Эмо.
	    \n"Скримо" более тяжелый вариант Эмо, больше крика и более жесткая музыка.
	    \n"Фрэнч Эмокор" – смягченный вариант "скримо", отличается мелодичностью.
        \nСкримо и Френч Эмокор развиваются и по сей день. Широкому кругу молодежи эмо стал известен в 1994 году, когда со своим диском дебютировала группа Sunny Day Real Estate "Diary". Представителями направления эмо в музыке являются также Estate, Rites of Spring, Christie Front Drive, The Party Of Helicopters.</string>
    <string name="emo_4">Мироощущение
        \nВыражение эмоций — главное правило для эмо-кидов (emo-kids — тех, кто относит себя к субкультуре эмо). Их отличает: самовыражение, противостояние несправедливости, особенное, чувственное мироощущение. Зачастую эмо-кид — ранимый и депрессивный человек. Он выделяется из толпы ярким внешним видом, ищет единомышленников и мечтает о счастливой любви. Существует стереотипное представление об эмо как о плаксивых мальчиках и девочках. Эмо характеризует основанный на эстетике прекрасного принципиально инфантильный взгляд на мир, интровертность, акцент на внутренних переживаниях. Эмо-культура пропагандирует Стрейт Эдж, то есть здоровый образ жизни: отказ от табака, наркотиков и алкоголя, разборчивость в половых связях. Большое значение придаётся таким ценностям, как дружба и любовь. Духовными идеалами культуры являются правдивость, честность, верность, искренность.</string>
    <string name="emo_5">Имидж эмо
        \nТрадиционной причёской эмо считается косая, рваная чёлка до кончика носа, закрывающая один глаз, а сзади короткие волосы, торчащие в разные стороны. Предпочтение отдаётся жёстким прямым чёрным волосам. У девушек возможны детские, смешные причёски — два маленьких хвостика, яркие заколочки — сердечки по бокам, бантики. Для создания этих причесок эмо тратят баллоны фиксирующего лака для волос. Часто эмо-киды прокалывают уши или делают тоннели. Помимо того, на лице эмо-кида может быть пирсинг (например в губах и левой ноздре, бровях, переносице) да и вообще где угодно. И юноши, и девушки могут красить губы под цвет кожи, использовать светлый тональный крем. Глаза густо подводят карандашом или тушью, благодаря чему они выглядят ярким пятном на лице. Ногти покрывают чёрным лаком.</string>
    <string name="emo_6">\nОдежда
	    \nЭмо носят одежду в розово-чёрных тонах с двуцветными узорами и стилизованными значками. Основными цветами в одежде являются чёрный и розовый (пурпурный), хотя и другие шокирующе-яркие сочетания считаются допустимыми.
	    Бывают сочетания в широкую полоску. Часто на одежде изображены названия эмо-групп, смешные рисунки или расколотые сердца. Встречаются черты спортивного стиля одежды скейтбордистов и BMX-еров.</string>
    <string name="emo_7">Наиболее типичная одежда
        \nУзкая, обтягивающая футболка. Узкие джинсы чёрного или пепельного-синего цвета, возможно, с дырками или заплатками.
        Чёрный или розовый ремень (часто из кожезаменителя по причине приверженности некоторых эмо-кидов к веганизму) с заклёпками, провисающими цепями и большой бляхой с символикой.
        Кеды с яркими или чёрными шнурками, зашнурованными особым способом.
        Клетчатая косынка-арафатка на шее.
        Характерная для эмо обувь — кеды типа конверс или скейтерские кеды, а также флипы (тряпичные тапочки в ромбик), слипы (обувь, похожая на тапочки, но с подошвой, как у кед), вэнсы с узором в шашечку.</string>
    <string name="emo_8">Символика
        \nПлаги
        Розовое сердце, часто с поперечной трещиной или разорванное в клочья.
        Череп с костями.
        Розовый (или чёрный) пистолет или скрещённые пистолеты с надписью "bang-bang" (звук выстрела).
        Чёрная пятиконечная звезда на розовом фоне.
        Розово-черная шаховница.
        Футболки с героями детских мультфильмов (например, Микки Маус).</string>
    <string name="rastafarians_1">Растаманами в мире традиционно называют последователей растафарианства.
	    \nИстория
        \nВместе с тем, в начале 1990-х годов на постсоветском пространстве образовалась особая молодёжная субкультура, представители которой также называют себя растаманами. При этом они зачастую не являются истинными приверженцами оригинальной религиозно-политической доктрины африканского превосходства, а причисляют себя к этой группе в первую очередь по признаку употребления марихуаны и гашиша.</string>
    <string name="rastafarians_2">Некоторым этого достаточно, чтобы считать себя растаманами, некоторые более приближены к растафарианской концепции — многие слушают Боба Марли и музыку регги в целом, используют для идентификации комбинацию цветов "красный-жёлтый-зелёный" (например, в одежде), некоторые носят дреды. Однако мало кто искренне отстаивает идею возвращения американских чернокожих в Африку, соблюдает растафарианский пост "айтал" и т. п.</string>
    <string name="rastafarians_3">Позиция
	    \nОбычно растаманы выступают за легализацию марихуаны, что находит отражение в песнях, атрибутике (в очень большом количестве сувенирных лавок мира имеются товары с растаманской символикой), политических декларациях (например, участие в ежегодном "Конопляном марше"). Многие растаманы также негативно относятся к приёму опиатов, амфетаминов и крепкого алкоголя, называя их "чернушными" наркотиками, но позитивно — к приёму психоделиков, что роднит их с субкультурой трансеров.</string>
</resources>